[gd_scene load_steps=6 format=3 uid="uid://d25f1lqy1mp5x"]

[ext_resource type="Script" path="res://ui/book.gd" id="1_qvnfb"]
[ext_resource type="Texture2D" uid="uid://cu46445elo3jm" path="res://ui/arrow_left.svg" id="2_3wg5e"]
[ext_resource type="Texture2D" uid="uid://fc2a450ol38q" path="res://ui/Bee_unknown.svg" id="2_e8udr"]
[ext_resource type="Texture2D" uid="uid://bc5kihw4ceao3" path="res://creatures/bees/mason_bee/Bee.svg" id="2_hsonb"]
[ext_resource type="Texture2D" uid="uid://ce7rp1hvfwchp" path="res://ui/arrow_right.svg" id="4_uypq3"]

[node name="Book" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qvnfb")
unknown_icon = ExtResource("2_e8udr")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ButtonLeft" type="Button" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
icon = ExtResource("2_3wg5e")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Icon" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("2_hsonb")
expand_mode = 2

[node name="LabelName" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "%BEE_NAME%"

[node name="InfoText" type="RichTextLabel" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_constants/line_separation = 5
fit_content = true

[node name="ButtonRight" type="Button" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
icon = ExtResource("4_uypq3")

[connection signal="pressed" from="MarginContainer/HBoxContainer/ButtonLeft" to="." method="_on_button_left_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ButtonRight" to="." method="_on_button_right_pressed"]
